pkgdatadir = $(datadir)/games/@PACKAGE@/Parts/Bcut

pkgdata_src = Bcut-Lankle.affine Bcut-Lankle01.dat \
		Bcut-Larm.affine Bcut-Larm01.dat \
		Bcut-Lelbow.affine Bcut-Lelbow01.dat \
		Bcut-Lfoot.affine Bcut-Lfoot01.dat \
		Bcut-Lforearm.affine Bcut-Lforearm01.dat \
		Bcut-Lhand.affine Bcut-Lhand01.dat \
		Bcut-Lknee.affine Bcut-Lknee01.dat \
		Bcut-Lshin.affine Bcut-Lshin01.dat \
		Bcut-Lshoulder.affine Bcut-Lshoulder01.dat \
		Bcut-Lthigh.affine Bcut-Lthigh01.dat \
		Bcut-Rankle.affine Bcut-Rankle01.dat \
		Bcut-Rarm.affine Bcut-Rarm01.dat \
		Bcut-Relbow.affine Bcut-Relbow01.dat \
		Bcut-Rfoot.affine Bcut-Rfoot01.dat \
		Bcut-Rforearm.affine Bcut-Rforearm01.dat \
		Bcut-Rhand.affine Bcut-Rhand01.dat \
		Bcut-Rknee.affine Bcut-Rknee01.dat \
		Bcut-Rshin.affine Bcut-Rshin01.dat \
		Bcut-Rshoulder.affine Bcut-Rshoulder01.dat \
		Bcut-Rthigh.affine Bcut-Rthigh01.dat \
		Bcut-chest.affine Bcut-chest01.dat \
		Bcut-head.affine Bcut-head01.dat \
		Bcut-hip.affine Bcut-hip01.dat \
		Bcut-racket.affine Bcut-racket01.dat 

pkgdata_DATA = $(pkgdata_src)

EXTRA_DIST = $(wildcard *.affine) $(wildcard *.dat)
