pkgdatadir = $(datadir)/games/@PACKAGE@/Parts/Bcut

pkgdata_src = Bcut-Lankle.affine \
		Bcut-Larm.affine \
		Bcut-Lelbow.affine \
		Bcut-Lfoot.affine \
		Bcut-Lforearm.affine \
		Bcut-Lhand.affine \
		Bcut-Lknee.affine \
		Bcut-Lshin.affine \
		Bcut-Lshoulder.affine \
		Bcut-Lthigh.affine \
		Bcut-Rankle.affine \
		Bcut-Rarm.affine \
		Bcut-Relbow.affine \
		Bcut-Rfoot.affine \
		Bcut-Rforearm.affine \
		Bcut-Rhand.affine \
		Bcut-Rknee.affine \
		Bcut-Rshin.affine \
		Bcut-Rshoulder.affine \
		Bcut-Rthigh.affine \
		Bcut-chest.affine \
		Bcut-head.affine \
		Bcut-hip.affine \
		Bcut-racket.affine \
		Bcut-center.affine \
		Bcut-chest.quaternion Bcut-head.quaternion \
		Bcut-Lshoulder.quaternion Bcut-Lelbow.quaternion \
		Bcut-Rshoulder.quaternion Bcut-Relbow.quaternion \
		Bcut-Rhand.quaternion Bcut-hip.quaternion

pkgdata_DATA = $(pkgdata_src)

EXTRA_DIST = $(wildcard *.affine) $(wildcard *.quaternion)
