pkgdatadir = $(datadir)/games/@PACKAGE@/Parts/Bnormal

pkgdata_src = Bnormal-center.affine \
		Bnormal-head.quaternion \
		Bnormal-chest.quaternion \
		Bnormal-hip.quaternion \
		Bnormal-Lshoulder.quaternion \
		Bnormal-Lelbow.quaternion \
		Bnormal-Rshoulder.quaternion \
		Bnormal-Relbow.quaternion \
		Bnormal-Rhand.quaternion 

pkgdata_DATA = $(pkgdata_src)

EXTRA_DIST = $(wildcard *.affine) $(wildcard *.quaternion)
