pkgdatadir = $(datadir)/games/@PACKAGE@/Parts/Bpeck

pkgdata_src = Bpeck-Larm.affine Bpeck-Larm01.dat \
		Bpeck-Lelbow.affine Bpeck-Lelbow01.dat \
		Bpeck-Lfoot.affine Bpeck-Lfoot01.dat \
		Bpeck-Lforearm.affine Bpeck-Lforearm01.dat \
		Bpeck-Lhand.affine Bpeck-Lhand01.dat \
		Bpeck-Lknee.affine Bpeck-Lknee01.dat \
		Bpeck-Lshin.affine Bpeck-Lshin01.dat \
		Bpeck-Lshoulder.affine Bpeck-Lshoulder01.dat \
		Bpeck-Lthigh.affine Bpeck-Lthigh01.dat \
		Bpeck-Rankle.affine Bpeck-Rankle01.dat \
		Bpeck-Rarm.affine Bpeck-Rarm01.dat \
		Bpeck-Relbow.affine Bpeck-Relbow01.dat \
		Bpeck-Rfoot.affine Bpeck-Rfoot01.dat \
		Bpeck-Rforearm.affine Bpeck-Rforearm01.dat \
		Bpeck-Rhand.affine Bpeck-Rhand01.dat \
		Bpeck-Rknee.affine Bpeck-Rknee01.dat \
		Bpeck-Rshin.affine Bpeck-Rshin01.dat \
		Bpeck-Rshoulder.affine Bpeck-Rshoulder01.dat \
		Bpeck-Rthigh.affine Bpeck-Rthigh01.dat \
		Bpeck-chest.affine Bpeck-chest01.dat \
		Bpeck-head.affine Bpeck-head01.dat \
		Bpeck-hip.affine Bpeck-hip01.dat \
		Bpeck-racket.affine Bpeck-racket01.dat

pkgdata_DATA = $(pkgdata_src)

EXTRA_DIST = $(wildcard *.affine) $(wildcard *.dat)
