pkgdatadir = $(datadir)/games/@PACKAGE@/Parts/Bpeck

pkgdata_src = Bpeck-Larm.affine \
		Bpeck-Lelbow.affine \
		Bpeck-Lfoot.affine \
		Bpeck-Lforearm.affine \
		Bpeck-Lhand.affine \
		Bpeck-Lknee.affine \
		Bpeck-Lshin.affine \
		Bpeck-Lshoulder.affine \
		Bpeck-Lthigh.affine \
		Bpeck-Rankle.affine \
		Bpeck-Rarm.affine \
		Bpeck-Relbow.affine \
		Bpeck-Rfoot.affine \
		Bpeck-Rforearm.affine \
		Bpeck-Rhand.affine \
		Bpeck-Rknee.affine \
		Bpeck-Rshin.affine \
		Bpeck-Rshoulder.affine \
		Bpeck-Rthigh.affine \
		Bpeck-chest.affine \
		Bpeck-head.affine \
		Bpeck-hip.affine \
		Bpeck-racket.affine \
		Bpeck-center.affine \
		Bpeck-chest.quaternion Bpeck-head.quaternion \
		Bpeck-Lshoulder.quaternion Bpeck-Lelbow.quaternion \
		Bpeck-Rshoulder.quaternion Bpeck-Relbow.quaternion \
		Bpeck-Rhand.quaternion Bpeck-hip.quaternion

pkgdata_DATA = $(pkgdata_src)

EXTRA_DIST = $(wildcard *.affine) $(wildcard *.quaternion)
