pkgdatadir = $(datadir)/games/@PACKAGE@/Parts/Fcut

pkgdata_src = Fcut-Lankle.affine Fcut-Lankle01.dat \
		Fcut-Larm.affine Fcut-Larm01.dat \
		Fcut-Lelbow.affine Fcut-Lelbow01.dat \
		Fcut-Lfoot.affine Fcut-Lfoot01.dat \
		Fcut-Lforearm.affine Fcut-Lforearm01.dat \
		Fcut-Lhand.affine Fcut-Lhand01.dat \
		Fcut-Lknee.affine Fcut-Lknee01.dat \
		Fcut-Lshin.affine Fcut-Lshin01.dat \
		Fcut-Lshoulder.affine Fcut-Lshoulder01.dat \
		Fcut-Lthigh.affine Fcut-Lthigh01.dat \
		Fcut-Rankle.affine Fcut-Rankle01.dat \
		Fcut-Rarm.affine Fcut-Rarm01.dat \
		Fcut-Relbow.affine Fcut-Relbow01.dat \
		Fcut-Rfoot.affine Fcut-Rfoot01.dat \
		Fcut-Rforearm.affine Fcut-Rforearm01.dat \
		Fcut-Rhand.affine Fcut-Rhand01.dat \
		Fcut-Rknee.affine Fcut-Rknee01.dat \
		Fcut-Rshin.affine Fcut-Rshin01.dat \
		Fcut-Rshoulder.affine Fcut-Rshoulder01.dat \
		Fcut-Rthigh.affine Fcut-Rthigh01.dat \
		Fcut-chest.affine Fcut-chest01.dat \
		Fcut-head.affine Fcut-head01.dat \
		Fcut-hip.affine Fcut-hip01.dat \
		Fcut-racket.affine Fcut-racket01.dat \
		Fcut-center.affine Fcut-center01.dat \
		Fcut-chest.quaternion Fcut-head.quaternion \
		Fcut-Lshoulder.quaternion Fcut-Lelbow.quaternion \
		Fcut-Rshoulder.quaternion Fcut-Relbow.quaternion \
		Fcut-Rhand.quaternion Fcut-hip.quaternion

pkgdata_DATA = $(pkgdata_src)

EXTRA_DIST = $(wildcard *.affine) $(wildcard *.dat) $(wildcard *.quaternion)
