pkgdatadir = $(datadir)/games/@PACKAGE@/Parts/Fcut

pkgdata_src = Fcut-Lankle.affine \
		Fcut-Larm.affine \
		Fcut-Lelbow.affine \
		Fcut-Lfoot.affine \
		Fcut-Lforearm.affine \
		Fcut-Lhand.affine \
		Fcut-Lknee.affine \
		Fcut-Lshin.affine \
		Fcut-Lshoulder.affine \
		Fcut-Lthigh.affine \
		Fcut-Rankle.affine \
		Fcut-Rarm.affine \
		Fcut-Relbow.affine \
		Fcut-Rfoot.affine \
		Fcut-Rforearm.affine \
		Fcut-Rhand.affine \
		Fcut-Rknee.affine \
		Fcut-Rshin.affine \
		Fcut-Rshoulder.affine \
		Fcut-Rthigh.affine \
		Fcut-chest.affine \
		Fcut-head.affine \
		Fcut-hip.affine \
		Fcut-racket.affine \
		Fcut-center.affine \
		Fcut-chest.quaternion Fcut-head.quaternion \
		Fcut-Lshoulder.quaternion Fcut-Lelbow.quaternion \
		Fcut-Rshoulder.quaternion Fcut-Relbow.quaternion \
		Fcut-Rhand.quaternion Fcut-hip.quaternion

pkgdata_DATA = $(pkgdata_src)

EXTRA_DIST = $(wildcard *.affine) $(wildcard *.quaternion)
