pkgdatadir = $(datadir)/games/@PACKAGE@/Parts/Fdrive

pkgdata_src = Fdrive-Lankle.affine Fdrive-Lankle01.dat \
		Fdrive-Larm.affine Fdrive-Larm01.dat \
		Fdrive-Lelbow.affine Fdrive-Lelbow01.dat \
		Fdrive-Lfoot.affine Fdrive-Lfoot01.dat \
		Fdrive-Lforearm.affine Fdrive-Lforearm01.dat \
		Fdrive-Lhand.affine Fdrive-Lhand01.dat \
		Fdrive-Lknee.affine Fdrive-Lknee01.dat \
		Fdrive-Lshin.affine Fdrive-Lshin01.dat \
		Fdrive-Lshoulder.affine Fdrive-Lshoulder01.dat \
		Fdrive-Lthigh.affine Fdrive-Lthigh01.dat \
		Fdrive-Rankle.affine Fdrive-Rankle01.dat \
		Fdrive-Rarm.affine Fdrive-Rarm01.dat \
		Fdrive-Relbow.affine Fdrive-Relbow01.dat \
		Fdrive-Rfoot.affine Fdrive-Rfoot01.dat \
		Fdrive-Rforearm.affine Fdrive-Rforearm01.dat \
		Fdrive-Rhand.affine Fdrive-Rhand01.dat \
		Fdrive-Rknee.affine Fdrive-Rknee01.dat \
		Fdrive-Rshin.affine Fdrive-Rshin01.dat \
		Fdrive-Rshoulder.affine Fdrive-Rshoulder01.dat \
		Fdrive-Rthigh.affine Fdrive-Rthigh01.dat \
		Fdrive-chest.affine Fdrive-chest01.dat \
		Fdrive-head.affine Fdrive-head01.dat \
		Fdrive-hip.affine Fdrive-hip01.dat \
		Fdrive-racket.affine Fdrive-racket01.dat \
		Fdrive-center.affine Fdrive-center01.dat \
		Fdrive-chest.quaternion Fdrive-head.quaternion \
		Fdrive-Lshoulder.quaternion Fdrive-Lelbow.quaternion \
		Fdrive-Rshoulder.quaternion Fdrive-Relbow.quaternion \
		Fdrive-Rhand.quaternion Fdrive-hip.quaternion

pkgdata_DATA = $(pkgdata_src)

EXTRA_DIST = $(wildcard *.affine) $(wildcard *.dat) $(wildcard *.quaternion)
