pkgdatadir = $(datadir)/games/@PACKAGE@/Parts/Fdrive

pkgdata_src = Fdrive-Lankle.affine \
		Fdrive-Larm.affine \
		Fdrive-Lelbow.affine \
		Fdrive-Lfoot.affine \
		Fdrive-Lforearm.affine \
		Fdrive-Lhand.affine \
		Fdrive-Lknee.affine \
		Fdrive-Lshin.affine \
		Fdrive-Lshoulder.affine \
		Fdrive-Lthigh.affine \
		Fdrive-Rankle.affine \
		Fdrive-Rarm.affine \
		Fdrive-Relbow.affine \
		Fdrive-Rfoot.affine \
		Fdrive-Rforearm.affine \
		Fdrive-Rhand.affine \
		Fdrive-Rknee.affine \
		Fdrive-Rshin.affine \
		Fdrive-Rshoulder.affine \
		Fdrive-Rthigh.affine \
		Fdrive-chest.affine \
		Fdrive-head.affine \
		Fdrive-hip.affine \
		Fdrive-racket.affine \
		Fdrive-center.affine \
		Fdrive-chest.quaternion Fdrive-head.quaternion \
		Fdrive-Lshoulder.quaternion Fdrive-Lelbow.quaternion \
		Fdrive-Rshoulder.quaternion Fdrive-Relbow.quaternion \
		Fdrive-Rhand.quaternion Fdrive-hip.quaternion

pkgdata_DATA = $(pkgdata_src)

EXTRA_DIST = $(wildcard *.affine) $(wildcard *.quaternion)
