pkgdatadir = $(datadir)/games/@PACKAGE@/Parts/Fnormal

pkgdata_src = Fnormal-Lankle.affine Fnormal-Lankle01.dat \
		Fnormal-Larm.affine Fnormal-Larm01.dat \
		Fnormal-Lelbow.affine Fnormal-Lelbow01.dat \
		Fnormal-Lfoot.affine Fnormal-Lfoot01.dat \
		Fnormal-Lforearm.affine Fnormal-Lforearm01.dat \
		Fnormal-Lhand.affine Fnormal-Lhand01.dat \
		Fnormal-Lknee.affine Fnormal-Lknee01.dat \
		Fnormal-Lshin.affine Fnormal-Lshin01.dat \
		Fnormal-Lshoulder.affine Fnormal-Lshoulder01.dat \
		Fnormal-Lthigh.affine Fnormal-Lthigh01.dat \
		Fnormal-Rankle.affine Fnormal-Rankle01.dat \
		Fnormal-Rarm.affine Fnormal-Rarm01.dat \
		Fnormal-Relbow.affine Fnormal-Relbow01.dat \
		Fnormal-Rfoot.affine Fnormal-Rfoot01.dat \
		Fnormal-Rforearm.affine Fnormal-Rforearm01.dat \
		Fnormal-Rhand.affine Fnormal-Rhand01.dat \
		Fnormal-Rknee.affine Fnormal-Rknee01.dat \
		Fnormal-Rshin.affine Fnormal-Rshin01.dat \
		Fnormal-Rshoulder.affine Fnormal-Rshoulder01.dat \
		Fnormal-Rthigh.affine Fnormal-Rthigh01.dat \
		Fnormal-chest.affine Fnormal-chest01.dat \
		Fnormal-head.affine Fnormal-head01.dat \
		Fnormal-hip.affine Fnormal-hip01.dat \
		Fnormal-racket.affine Fnormal-racket01.dat \
		Fnormal-center.affine Fnormal-center01.dat \
		Fnormal-chest.quaternion Fnormal-head.quaternion \
		Fnormal-Lshoulder.quaternion Fnormal-Lelbow.quaternion \
		Fnormal-Rshoulder.quaternion Fnormal-Relbow.quaternion \
		Fnormal-Rhand.quaternion Fnormal-hip.quaternion

pkgdata_DATA = $(pkgdata_src)

EXTRA_DIST = $(wildcard *.affine) $(wildcard *.dat) $(wildcard *.quaternion)
