pkgdatadir = $(datadir)/games/@PACKAGE@/Parts/Fnormal

pkgdata_src = Fnormal-Lankle.affine \
		Fnormal-Larm.affine \
		Fnormal-Lelbow.affine \
		Fnormal-Lfoot.affine \
		Fnormal-Lforearm.affine \
		Fnormal-Lhand.affine \
		Fnormal-Lknee.affine \
		Fnormal-Lshin.affine \
		Fnormal-Lshoulder.affine \
		Fnormal-Lthigh.affine \
		Fnormal-Rankle.affine \
		Fnormal-Rarm.affine \
		Fnormal-Relbow.affine \
		Fnormal-Rfoot.affine \
		Fnormal-Rforearm.affine \
		Fnormal-Rhand.affine \
		Fnormal-Rknee.affine \
		Fnormal-Rshin.affine \
		Fnormal-Rshoulder.affine \
		Fnormal-Rthigh.affine \
		Fnormal-chest.affine \
		Fnormal-head.affine \
		Fnormal-hip.affine \
		Fnormal-racket.affine \
		Fnormal-center.affine \
		Fnormal-chest.quaternion Fnormal-head.quaternion \
		Fnormal-Lshoulder.quaternion Fnormal-Lelbow.quaternion \
		Fnormal-Rshoulder.quaternion Fnormal-Relbow.quaternion \
		Fnormal-Rhand.quaternion Fnormal-hip.quaternion

pkgdata_DATA = $(pkgdata_src)

EXTRA_DIST = $(wildcard *.affine) $(wildcard *.quaternion)
