pkgdatadir = $(datadir)/games/@PACKAGE@/Parts/Fpeck

pkgdata_src = Fpeck-Lankle.affine Fpeck-Lankle01.dat \
		Fpeck-Larm.affine Fpeck-Larm01.dat \
		Fpeck-Lelbow.affine Fpeck-Lelbow01.dat \
		Fpeck-Lfoot.affine Fpeck-Lfoot01.dat \
		Fpeck-Lforearm.affine Fpeck-Lforearm01.dat \
		Fpeck-Lhand.affine Fpeck-Lhand01.dat \
		Fpeck-Lknee.affine Fpeck-Lknee01.dat \
		Fpeck-Lshin.affine Fpeck-Lshin01.dat \
		Fpeck-Lshoulder.affine Fpeck-Lshoulder01.dat \
		Fpeck-Lthigh.affine Fpeck-Lthigh01.dat \
		Fpeck-Rankle.affine Fpeck-Rankle01.dat \
		Fpeck-Rarm.affine Fpeck-Rarm01.dat \
		Fpeck-Relbow.affine Fpeck-Relbow01.dat \
		Fpeck-Rfoot.affine Fpeck-Rfoot01.dat \
		Fpeck-Rforearm.affine Fpeck-Rforearm01.dat \
		Fpeck-Rhand.affine Fpeck-Rhand01.dat \
		Fpeck-Rknee.affine Fpeck-Rknee01.dat \
		Fpeck-Rshin.affine Fpeck-Rshin01.dat \
		Fpeck-Rshoulder.affine Fpeck-Rshoulder01.dat \
		Fpeck-Rthigh.affine Fpeck-Rthigh01.dat \
		Fpeck-chest.affine Fpeck-chest01.dat \
		Fpeck-head.affine Fpeck-head01.dat \
		Fpeck-hip.affine Fpeck-hip01.dat \
		Fpeck-racket.affine Fpeck-racket01.dat \
		Fpeck-center.affine Fpeck-center01.dat \
		Fpeck-chest.quaternion Fpeck-head.quaternion \
		Fpeck-Lshoulder.quaternion Fpeck-Lelbow.quaternion \
		Fpeck-Rshoulder.quaternion Fpeck-Relbow.quaternion \
		Fpeck-Rhand.quaternion Fpeck-hip.quaternion

pkgdata_DATA = $(pkgdata_src)

EXTRA_DIST = $(wildcard *.affine) $(wildcard *.dat) $(wildcard *.quaternion)
