pkgdatadir = $(datadir)/games/@PACKAGE@/Parts/Fpeck

pkgdata_src = Fpeck-Lankle.affine \
		Fpeck-Larm.affine \
		Fpeck-Lelbow.affine \
		Fpeck-Lfoot.affine \
		Fpeck-Lforearm.affine \
		Fpeck-Lhand.affine \
		Fpeck-Lknee.affine \
		Fpeck-Lshin.affine \
		Fpeck-Lshoulder.affine \
		Fpeck-Lthigh.affine \
		Fpeck-Rankle.affine \
		Fpeck-Rarm.affine \
		Fpeck-Relbow.affine \
		Fpeck-Rfoot.affine \
		Fpeck-Rforearm.affine \
		Fpeck-Rhand.affine \
		Fpeck-Rknee.affine \
		Fpeck-Rshin.affine \
		Fpeck-Rshoulder.affine \
		Fpeck-Rthigh.affine \
		Fpeck-chest.affine \
		Fpeck-head.affine \
		Fpeck-hip.affine \
		Fpeck-racket.affine \
		Fpeck-center.affine \
		Fpeck-chest.quaternion Fpeck-head.quaternion \
		Fpeck-Lshoulder.quaternion Fpeck-Lelbow.quaternion \
		Fpeck-Rshoulder.quaternion Fpeck-Relbow.quaternion \
		Fpeck-Rhand.quaternion Fpeck-hip.quaternion

pkgdata_DATA = $(pkgdata_src)

EXTRA_DIST = $(wildcard *.affine) $(wildcard *.quaternion)
