pkgdatadir = $(datadir)/games/@PACKAGE@/Parts/Fsmash

pkgdata_src = Fsmash-Larm.affine Fsmash-Larm01.dat \
		Fsmash-Lelbow.affine Fsmash-Lelbow01.dat \
		Fsmash-Lfoot.affine Fsmash-Lfoot01.dat \
		Fsmash-Lforearm.affine Fsmash-Lforearm01.dat \
		Fsmash-Lhand.affine Fsmash-Lhand01.dat \
		Fsmash-Lknee.affine Fsmash-Lknee01.dat \
		Fsmash-Lshin.affine Fsmash-Lshin01.dat \
		Fsmash-Lshoulder.affine Fsmash-Lshoulder01.dat \
		Fsmash-Lthigh.affine Fsmash-Lthigh01.dat \
		Fsmash-Rankle.affine Fsmash-Rankle01.dat \
		Fsmash-Rarm.affine Fsmash-Rarm01.dat \
		Fsmash-Relbow.affine Fsmash-Relbow01.dat \
		Fsmash-Rfoot.affine Fsmash-Rfoot01.dat \
		Fsmash-Rforearm.affine Fsmash-Rforearm01.dat \
		Fsmash-Rhand.affine Fsmash-Rhand01.dat \
		Fsmash-Rknee.affine Fsmash-Rknee01.dat \
		Fsmash-Rshin.affine Fsmash-Rshin01.dat \
		Fsmash-Rshoulder.affine Fsmash-Rshoulder01.dat \
		Fsmash-Rthigh.affine Fsmash-Rthigh01.dat \
		Fsmash-chest.affine Fsmash-chest01.dat \
		Fsmash-head.affine Fsmash-head01.dat \
		Fsmash-hip.affine Fsmash-hip01.dat \
		Fsmash-racket.affine Fsmash-racket01.dat \
		Fsmash-center.affine Fsmash-center01.dat \
		Fsmash-chest.quaternion Fsmash-head.quaternion \
		Fsmash-Lshoulder.quaternion Fsmash-Lelbow.quaternion \
		Fsmash-Rshoulder.quaternion Fsmash-Relbow.quaternion \
		Fsmash-Rhand.quaternion Fsmash-hip.quaternion

pkgdata_DATA = $(pkgdata_src)

EXTRA_DIST = $(wildcard *.affine) $(wildcard *.dat) $(wildcard *.quaternion)
