pkgdatadir = $(datadir)/games/@PACKAGE@/Parts/Fsmash

pkgdata_src = Fsmash-Larm.affine \
		Fsmash-Lelbow.affine \
		Fsmash-Lfoot.affine \
		Fsmash-Lforearm.affine \
		Fsmash-Lhand.affine \
		Fsmash-Lknee.affine \
		Fsmash-Lshin.affine \
		Fsmash-Lshoulder.affine \
		Fsmash-Lthigh.affine \
		Fsmash-Rankle.affine \
		Fsmash-Rarm.affine \
		Fsmash-Relbow.affine \
		Fsmash-Rfoot.affine \
		Fsmash-Rforearm.affine \
		Fsmash-Rhand.affine \
		Fsmash-Rknee.affine \
		Fsmash-Rshin.affine \
		Fsmash-Rshoulder.affine \
		Fsmash-Rthigh.affine \
		Fsmash-chest.affine \
		Fsmash-head.affine \
		Fsmash-hip.affine \
		Fsmash-racket.affine \
		Fsmash-center.affine \
		Fsmash-chest.quaternion Fsmash-head.quaternion \
		Fsmash-Lshoulder.quaternion Fsmash-Lelbow.quaternion \
		Fsmash-Rshoulder.quaternion Fsmash-Relbow.quaternion \
		Fsmash-Rhand.quaternion Fsmash-hip.quaternion

pkgdata_DATA = $(pkgdata_src)

EXTRA_DIST = $(wildcard *.affine) $(wildcard *.quaternion)
