pkgdatadir = $(datadir)/games/@PACKAGE@/Parts/model

pkgdata_src = Lankle01.dat \
		Larm01.dat \
		Lelbow01.dat \
		Lfoot01.dat \
		Lforearm01.dat \
		Lhand01.dat \
		Lknee01.dat \
		Lshin01.dat \
		Lshoulder01.dat \
		Lthigh01.dat \
		Rankle01.dat \
		Rarm01.dat \
		Relbow01.dat \
		Rfoot01.dat \
		Rforearm01.dat \
		Rhand01.dat \
		Rknee01.dat \
		Rshin01.dat \
		Rshoulder01.dat \
		Rthigh01.dat \
		chest01.dat \
		head01.dat \
		hip01.dat \
		racket01.dat

pkgdata_DATA = $(pkgdata_src)

EXTRA_DIST = $(wildcard *.dat)
